--- a/ares_destroy.3
+++ b/ares_destroy.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_destroy.3,v 1.1 1998/08/13 18:07:28 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -33,6 +33,8 @@ freeing all memory and closing all sockets used by the channel.
 invokes the callbacks for each pending query on the channel, passing a
 status of
 .BR ARES_EDESTRUCTION .
+These calls give the callbacks a chance to clean up any state which
+might have been stored in their arguments.
 .SH SEE ALSO
 .BR ares_init (3)
 .SH AUTHOR
