--- a/ares_fds.3
+++ b/ares_fds.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_fds.3,v 1.1 1998/08/13 18:07:29 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -36,7 +36,14 @@ File descriptors will be set in the file descriptor sets pointed to by
 .I read_fds
 and
 .I write_fds
-as appropriate.
+as appropriate.  File descriptors already set in
+.I read_fds
+and
+.I write_fds
+will remain set; initialization of the file descriptor sets
+(using
+.BR FD_ZERO )
+is the responsibility of the caller.
 .SH RETURN VALUES
 .B ares_fds
 returns one greater than the number of the highest socket set in either
