--- a/ares_free_errmem.3
+++ b/ares_free_errmem.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_free_errmem.3,v 1.1 1998/08/13 18:07:29 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
