--- a/ares_init.3
+++ b/ares_init.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_init.3,v 1.1 1998/08/13 18:07:31 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -163,7 +163,7 @@ A configuration file could not be read.
 .B ARES_ENOMEM
 The process's available memory was exhausted.
 .SH SEE ALSO
-ares_destroy(3)
+.BR ares_destroy (3)
 .SH AUTHOR
 Greg Hudson, MIT Information Systems
 .br
