--- a/ares_mkquery.3
+++ b/ares_mkquery.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_mkquery.3,v 1.1 1998/08/13 18:07:32 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -48,6 +48,9 @@ pointed to by
 .IR buf ,
 and the length of which will be stored in the variable pointed to by
 .IR buflen .
+It is the caller's responsibility to free this buffer using
+.B free
+when it is no longer needed.
 .SH RETURN VALUES
 .B ares_expand_name
 can return any of the following values:
