--- a/ares_parse_a_reply.3
+++ b/ares_parse_a_reply.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_parse_a_reply.3,v 1.1 1998/08/13 18:07:33 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -37,7 +37,7 @@ and
 give the contents of the response.  The result is stored in allocated
 memory and a pointer to it stored into the variable pointed to by
 .IR host .
-It is caller's responsibility to free the resulting host structure
+It is the caller's responsibility to free the resulting host structure
 using
 .BR ares_free_hostent (3)
 when it is no longer needed.
