--- a/ares_parse_ptr_reply.3
+++ b/ares_parse_ptr_reply.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_parse_ptr_reply.3,v 1.1 1998/08/13 18:07:33 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -49,7 +49,7 @@ The resulting
 is stored in allocated memory and a pointer to it stored into the
 variable pointed to by
 .IR host .
-It is caller's responsibility to free the resulting host structure
+It is the caller's responsibility to free the resulting host structure
 using
 .BR ares_free_hostent (3)
 when it is no longer needed.
@@ -69,7 +69,7 @@ The response did not contain an answer to the query.
 .B ARES_ENOMEM
 Memory was exhausted.
 .SH SEE ALSO
-.BR ares_gethostbyname (3),
+.BR ares_gethostbyaddr (3),
 .BR ares_free_hostent (3)
 .SH AUTHOR
 Greg Hudson, MIT Information Systems
