--- a/ares_process.3
+++ b/ares_process.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_process.3,v 1.1 1998/08/13 18:07:34 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
