--- a/ares_send.3
+++ b/ares_send.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_send.3,v 1.1 1998/08/13 18:07:35 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -21,6 +21,9 @@ ares_send \- Initiate a DNS query
 .nf
 .B #include <ares.h>
 .PP
+.B typedef void (*ares_callback)(void *\fIarg\fP, int \fIstatus\fP,
+.B	unsigned char *\fIabuf\fP, int \fIalen\fP)
+.PP
 .B
 void ares_send(ares_channel \fIchannel\fP, const unsigned char *\fIqbuf\fP,
 .B 	int \fIqlen\fP, ares_callback \fIcallback\fP, void *\fIarg\fP)
@@ -38,21 +41,13 @@ and
 give the DNS query, which should already have been formatted according
 to the DNS protocol.  When the query is complete or has failed, the
 ares library will invoke
-.IR callback ,
-which should have the following prototype:
-.PP
-.RS
-.nf
-.B void callback(void *\fIarg\fP, int \fIstatus\fP,
-.B	unsigned char *\fIabuf\fP, int \fIalen\fP)
-.fi
-.RE
-.PP
+.IR callback .
 Completion or failure of the query may happen immediately, or may
 happen during a later call to
 .BR ares_process (3)
 or
 .BR ares_destroy (3).
+.PP
 The callback argument
 .I arg
 is copied from the
@@ -67,8 +62,12 @@ may have any of the following values:
 .B ARES_SUCCESS
 The query completed.
 .TP 19
+.B ARES_EBADQUERY
+The query buffer was poorly formed (was not long enough for a DNS
+header or was too long for TCP transmission).
+.TP 19
 .B ARES_ETIMEOUT
-No name servers responded within the timeout.
+No name servers responded within the timeout period.
 .TP 19
 .B ARES_ECONNREFUSED
 No name servers could be contacted.
@@ -111,8 +110,6 @@ status, so a callback status of
 does not reflect as much about the response as for other query
 functions.
 .SH SEE ALSO
-.BR ares_fds (3),
-.BR ares_timeout (3),
 .BR ares_process (3)
 .SH AUTHOR
 Greg Hudson, MIT Information Systems
