--- a/ares_timeout.3
+++ b/ares_timeout.3
@@ -1,4 +1,4 @@
-.\" $Id$
+.\" $Id: ares_timeout.3,v 1.1 1998/08/13 18:07:36 ghudson Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
@@ -22,7 +22,7 @@ ares_fds \- Get file descriptors to select on for name service
 .B #include <ares.h>
 .PP
 .B struct timeval *ares_timeout(ares_channel \fIchannel\fP,
-.B	struct timeval *\fItv\fP)
+.B	struct timeval *\fImaxtv\fP, struct timeval *\fItvbuf\fP)
 .fi
 .SH DESCRIPTION
 The
@@ -30,14 +30,31 @@ The
 function determines the maximum time for which the caller should wait
 before invoking 
 .BR ares_process (3)
-to process timeouts.  If no queries with timeouts are pending,
+to process timeouts.  The parameter
+.I maxtv
+specifies a existing maximum timeout, or
+.B NULL
+if the caller does not wish to apply a maximum timeout.  The parameter
+.I tvbuf
+must point to a writable buffer of type
+.BR "struct timeval" .
+It is valid for
+.I maxtv
+and
+.I tvbuf
+to have the same value.
+.PP
+If no queries have timeouts pending sooner than the given maximum
+timeout,
 .B ares_timeout
-returns NULL; otherwise
+returns the value of
+.IR maxtv;
+otherwise
 .B ares_timeout
-stores the proper timeout value into the structure pointed to by
-.I tv
+stores the appropriate timeout value into the buffer pointed to by
+.I tvbuf
 and returns the value of
-.IR tv .
+.IR tvbuf .
 .SH SEE ALSO
 .BR ares_fds (3),
 .BR ares_process (3)
