--- a/ares_free_string.3
+++ b/ares_free_string.3
@@ -1,4 +1,4 @@
-.\" $Id: ares_free_string.3,v 1.1 2000/01/05 16:29:43 ghudson Exp $
+.\" $Id: ares_free_string.3,v 1.1 2003/10/07 21:54:04 bagder Exp $
 .\"
 .\" Copyright 2000 by the Massachusetts Institute of Technology.
 .\"
