--- a/ares_mkquery.3
+++ b/ares_mkquery.3
@@ -1,4 +1,4 @@
-.\" $Id: ares_mkquery.3,v 1.5 2000/09/21 19:15:50 ghudson Exp $
+.\" $Id: ares_mkquery.3,v 1.1 2003/10/07 21:54:04 bagder Exp $
 .\"
 .\" Copyright 1998, 2000 by the Massachusetts Institute of Technology.
 .\"
