--- a/ares_init_options.3
+++ b/ares_init_options.3
@@ -1,2 +1,2 @@
 .so man3/ares_init.3
-.\" $Id: ares_init_options.3,v 1.1 1998/08/13 18:07:32 ghudson Exp $
+.\" $Id: ares_init_options.3,v 1.1 2003/10/07 21:54:04 bagder Exp $
