--- a/ares_parse_a_reply.3
+++ b/ares_parse_a_reply.3
@@ -1,4 +1,4 @@
-.\" $Id: ares_parse_a_reply.3,v 1.1 1998/08/13 18:07:33 ghudson Exp $
+.\" $Id: ares_parse_a_reply.3,v 1.1 2003/10/07 21:54:04 bagder Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
