--- a/ares_process.3
+++ b/ares_process.3
@@ -1,4 +1,4 @@
-.\" $Id: ares_process.3,v 1.2 1998/08/20 23:21:03 ghudson Exp $
+.\" $Id: ares_process.3,v 1.1 2003/10/07 21:54:04 bagder Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
