--- a/ares_query.3
+++ b/ares_query.3
@@ -1,4 +1,4 @@
-.\" $Id: ares_query.3,v 1.2 2000/09/21 19:15:56 ghudson Exp $
+.\" $Id: ares_query.3,v 1.1 2003/10/07 21:54:04 bagder Exp $
 .\"
 .\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
