--- a/ares_cancel.3
+++ b/ares_cancel.3
@@ -1,6 +1,6 @@
-.\" $Id: ares_free_string.3,v 1.3 2004/03/30 09:06:42 bagder Exp $
+.\" $Id: ares_cancel.3,v 1.1 2004/04/01 08:25:58 bagder Exp $
 .\"
-.\" Copyright 2000 by the Massachusetts Institute of Technology.
+.\" Copyright 1998 by the Massachusetts Institute of Technology.
 .\"
 .\" Permission to use, copy, modify, and distribute this
 .\" software and its documentation for any purpose and without
@@ -14,23 +14,24 @@
 .\" this software for any purpose.  It is provided "as is"
 .\" without express or implied warranty.
 .\"
-.TH ARES_FREE_STRING 3 "4 February 2004"
+.TH ARES_CANCEL 3 "31 March 2004"
 .SH NAME
-ares_free_string \- Free strings allocated by ares functions
+ares_cancel \- Cancel a resolve
 .SH SYNOPSIS
 .nf
 .B #include <ares.h>
 .PP
-.B void ares_free_string(void *\fIstr\fP)
+.B int ares_cancel(ares_channel \fIchannel\fP)
 .fi
 .SH DESCRIPTION
-The
-.I ares_free_string
-function frees a string allocated by an ares function.
+The \fBares_cancel\fP function cancels all lookups/requests made on the the
+name service channel identified by \fIchannel\fP.  \fBares_cancel\fP invokes
+the callbacks for each pending query on the channel, passing a status of
+.BR ARES_ETIMEOUT .
+These calls give the callbacks a chance to clean up any state which
+might have been stored in their arguments.
 .SH SEE ALSO
-.BR ares_mkquery (3)
-.BR ares_expand_string (3)
+.BR ares_init (3)
+.BR ares_destroy (3)
 .SH AUTHOR
-Greg Hudson, MIT Information Systems
-.br
-Copyright 2000 by the Massachusetts Institute of Technology.
+Dirk Manske
