--- a/ares_mkquery.3
+++ b/ares_mkquery.3
@@ -1,4 +1,4 @@
-.\" $Id: ares_mkquery.3,v 1.1 2003/10/07 21:54:04 bagder Exp $
+.\" $Id: ares_mkquery.3,v 1.3 2004/04/02 09:50:42 bagder Exp $
 .\"
 .\" Copyright 1998, 2000 by the Massachusetts Institute of Technology.
 .\"
@@ -21,11 +21,9 @@ ares_mkquery \- Compose a single-question DNS query buffer
 .nf
 .B #include <ares.h>
 .PP
-.B
-int ares_mkquery(const char *\fIname\fP, int \fIdnsclass\fP, int \fItype\fP,
-.B
-	unsigned short \fIid\fP, int \fIrd\fP, char **\fIbuf\fP,
-	int *\fIbuflen\fP)
+.B int ares_mkquery(const char *\fIname\fP, int \fIdnsclass\fP, int \fItype\fP,
+.B	unsigned short \fIid\fP, int \fIrd\fP, char **\fIbuf\fP,
+.B	int *\fIbuflen\fP)
 .fi
 .SH DESCRIPTION
 The
@@ -52,8 +50,7 @@ stored in the variable pointed to by
 and the length of which will be stored in the variable pointed to by
 .IR buflen .
 It is the caller's responsibility to free this buffer using
-.B ares_free_string
-when it is no longer needed.
+\fIares_free_string(3)\fP when it is no longer needed.
 .SH RETURN VALUES
 .B ares_mkquery
 can return any of the following values:
