--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,15 @@ Henrik Stoerner
 Yang Tse
 Nick Mathewson
 Alexander Lazic
+Andreas Rieke
+Guilherme Balena Versiani
+Brad Spencer
+Ravi Pratap
+William Ahern
+Bram Matthys
+Michael Wallner
+Vlad Dinulescu
+Brad House
+Shmulik Regev
+Ashish Sharma
+Brad Spencer
