--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,24 +1,26 @@
-This is what's new and changed in the c-ares 1.4.0 release:
+This is what's new and changed in the c-ares 1.5.0 release:
 
- o fixed VS2005 compiler warnings due to time_t being 64bit
- o introduced cryptographically secure transaction IDs
- o added ares_save_options()
- o added ares_destroy_options()
- o added ares_process_fd()
- o fixed undefined return value in init_by_resolv_conf() function for windows
- o added ares_parse_ns_reply()
- o fix failure to get the search sequence of /etc/hosts and DNS from
-   /etc/nsswitch.conf, /etc/host.conf or /etc/svc.conf when /etc/resolv.conf
-   did not exist
- o when domains were sert in the options struct, and there were domain/search
-   entries in /etc/resolv.conf, the domains of the options struct would be
-   overridden
- o removed a couple of potential zero size memory allocations
- o fixed the line endings in areslib.dsp
+ o SONAME bump to a few API and ABI breaking changes:
+   - ares_host_callback()
+   - ares_nameinfo_callback()
+   - ares_parse_a_reply()
+   - ares_parse_aaaa_reply()
+
+ o two valgrind reports were silenced
+ o ares_save_options() fix
+ o do DNS retries even on TCP connections
+ o correctly clear sockets from the fd_set in several functions
+ o always wait on TCP events to detect connect closures
+ o new socket options: ARES_OPT_SOCK_SNDBUF and ARES_OPT_SOCK_RCVBUF
+ o made the query callbacks receive the number of timeouts that happened during
+   the execution of a query
+ o don't skip a server if it's the only one
+ o segfault when generating a DNS "Transaction ID" under low memory conditions
+ o ares_strerror() segfault fix
+ o added copyright texts to a few places that were missing them
 
 Thanks go to these friendly people for their efforts and contributions:
 
- Andreas Rieke, Yang Tse, Michael Wallner, Vlad Dinulescu, Ravi Pratap,
- Brad House, Shmulik Regev, Brad Spencer
+ Vlad Dinulescu, Brad House, Steinar H. Gunderson, Yang Tse
 
 Have fun!
