--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -1,25 +1,27 @@
-This is what's new and changed in the c-ares 1.6.0 release:
+This is what's new and changed in the c-ares 1.6.1 release:
 
 Changed:
 
- o Added support for the glibc "rotate" resolv.conf option (or ARES_OPT_ROTATE)
- o Added ares_gethostbyname_file()
- o Added ares_dup()
- o Added ares_set_socket_callback()
+ o in6_addr is not used in ares.h anymore, but a private ares_in6_addr is
+   instead declared and used
+ o ares_gethostbyname() now supports 'AF_UNSPEC' as a family for resolving
+   either AF_INET6 or AF_INET
+ o a build-time configured ares_socklen_t is now used instead of socklen_t
+ o new ares_library_init() and ares_library_cleanup() functions
+ o new --enable-curldebug configure option
+ o ARES_ECANCELLED is now sent as reason for ares_cancel()
 
 Fixed:
 
- o improved configure detection of several functions
- o improved source code portability
- o adig supports a regular numerical dotted IP address for the -s option
- o handling of EINPROGRESS for UDP connects
- o ares_parse_ptr_reply() would cause a buffer to shrink instead of expand if a
-   reply contained 8 or more records
- o buildconf works on OS X
+ o ares_parse_*_reply() functions now return ARES_EBADRESP instead of
+   ARES_EBADNAME if the name in the response failed to decode
+ o only expose/export symbols starting with 'ares_'
+ o fix \Device\TCP handle leaks triggered by buggy iphlpapi.dll
+ o init without internet gone no longer fails
 
 Thanks go to these friendly people for their efforts and contributions:
 
- Yang Tse, Charles Hardin, Carlo Contavalli, Brad Spencer, Gerald Combs,
- Gregor Jasny
+ Phil Blundell, Japheth Cleaver, Yang Tse, Gregor Jasny, Joshua Kwan,
+ Timo Teras
 
 Have fun!
